# quadruped_control

./: .clang-format  .gitignore  README.md  quadruped.repos
quadruped_controller/: CMakeLists.txt  package.xml
quadruped_controller/cmake/: FindqpOASES.cmake
quadruped_controller/config/: cheetah.rviz  fake_gait.rviz  fake_gait.yaml  gait_visualizer.yaml  teleop_ps4.yaml  teleop_ps4_stance.yaml  teleop_ps4_walking.yaml
quadruped_controller/include/quadruped_controller/: balance_controller.hpp  foot_planner.hpp  gait.hpp  joint_controller.hpp  kinematics.hpp  pid_controller.hpp  trajectory.hpp  types.hpp
quadruped_controller/include/quadruped_controller/math/: numerics.hpp  rigid3d.hpp
quadruped_controller/launch/: control.launch  fake_control.launch  fake_gait.launch  gait_visualizer.launch
quadruped_controller/scripts/kinematics/: quadruped_kinematics.ipynb
quadruped_controller/scripts/kinematics/.ipynb_checkpoints/: quadruped_kinematics-checkpoint.ipynb
quadruped_controller/src/: commander_node.cpp  fake_gait_node.cpp  gait_visualizer_node.cpp  test_node.cpp  test_qp_node.cpp
quadruped_controller/src/quadruped_controller/: balance_controller.cpp  foot_planner.cpp  gait.cpp  joint_controller.cpp  kinematics.cpp  pid_controller.cpp  trajectory.cpp
quadruped_controller/src/quadruped_controller/math/: numerics.cpp  rigid3d.cpp
quadruped_msgs/: CMakeLists.txt  package.xml
quadruped_msgs/msg/: CoMState.msg  FootState.msg  JointTorqueCmd.msg  LegJointState.msg  LegJoints.msg
quadruped_simulation/: CMakeLists.txt  package.xml
quadruped_simulation/config/: mit_cheetah_config.yaml  mit_cheetah_kinematics.yaml  physics.yaml
quadruped_simulation/launch/: world.launch
quadruped_simulation/scripts/: drake_visualizer
quadruped_simulation/src/: drake_interface_node.cpp
