<?xml version="1.0"?>
<package format="2">
  <name>quadruped_controller</name>
  <version>1.0.0</version>
  <description>Quadruped control architecture</description>
  <maintainer email="boston@picknik.ai">bostoncleek</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>armadillo</depend>
  <depend>quadruped_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
</package>
