<?xml version="1.0"?>
<package format="3">
  <name>quadruped_controller</name>
  <version>1.0.0</version>
  <description>Quadruped control architecture</description>
  <maintainer email="boston@picknik.ai">bostoncleek</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>armadillo</depend>
  <depend>geometry_msgs</depend>
  <depend>quadruped_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>mit_cheetah_description</exec_depend>
  <exec_depend>quadruped_simulation</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
