<?xml version="1.0"?>
<package format="3">
  <name>quadruped_msgs</name>
  <version>1.0.0</version>
  <description>Quadruped msgs for control</description>
  <maintainer email="boston@picknik.ai">bostoncleek</maintainer>
  <license>BSD-3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
