<?xml version="1.0"?>
<package format="3">
  <name>quadruped_simulation</name>
  <version>1.0.0</version>
  <description>Drake physics interface</description>
  <maintainer email="boston@picknik.ai">bostoncleek</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>quadruped_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>mit_cheetah_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>